@@ -1,0 +1,63 @@
+--TEST--
+Bug #47596 (Bus error on parsing file, when file size is equal to page size)
+--FILE--
+<?php
+echo "ok\n";
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comment comment comment comment comment comment comment
+// comment comment comm
+?>
+--EXPECT--
+ok
